# quantcard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: tiny_mlp.py
src/quantbench/: __init__.py  bench.py  cli.py  configs.py  report.py
src/quantcard/: __init__.py  bench.py  cli.py  configs.py  report.py
tests/: test_bench.py
